Release v27.45.0 Production Calendar Foundation
